Fixes the padding on the navbar whcih is too wide for tablets

--- a/packages/web/styles/style.scss
+++ b/packages/web/styles/style.scss
@@ -209,7 +209,7 @@ hr {
     }
   }
 }
-@media (max-width: 769px) {
+@media only screen and (max-width: 1023px) {
   .navbar {
     .section.container {
       padding: 00px !important;
